# Bioinformatics-Final-Project

./: .gitignore  compare_csv_parquet.py  convert_to_parquet.py  data_source.txt  describe_data.py  look_at_parquet_fails.py  parquet_failes.txt  pyproject.toml  tie_data.py
